--- a/esp32s3-hal/Cargo.toml
+++ b/esp32s3-hal/Cargo.toml
@@ -151,3 +151,7 @@ required-features = ["embassy", "async"]
 [[example]]
 name              = "embassy_i2s_read"
 required-features = ["embassy", "async"]
+
+[[example]]
+name              = "embassy_usb_serial_jtag"
+required-features = ["embassy", "async"]
