--- a/esp-wifi/Cargo.toml
+++ b/esp-wifi/Cargo.toml
@@ -57,7 +57,6 @@ toml-cfg.workspace = true
 [dev-dependencies]
 esp-println = { workspace = true, features = ["log"] }
 esp-backtrace.workspace = true
-embedded-svc.workspace = true
 embassy-executor.workspace = true
 embassy-time.workspace = true
 futures-util.workspace = true
@@ -106,8 +105,7 @@ dump-packets = []
 smoltcp = [ "dep:smoltcp" ]
 utils = [ "smoltcp" ]
 enumset = []
-embedded-svc = [ "dep:enumset", "dep:embedded-svc" ]
-wifi = [ "embedded-svc" ]
+wifi = [ "dep:enumset", "dep:embedded-svc" ]
 ble = [ "esp32-hal?/bluetooth" ]
 phy-enable-usb = []
 ps-min-modem = []
