--- a/esp32c6-lp-hal/Cargo.toml
+++ b/esp32c6-lp-hal/Cargo.toml
@@ -23,7 +23,7 @@ categories = [
 [dependencies]
 critical-section = { version = "1.1.2", features = ["restore-state-u8"] }
 embedded-hal     = { version = "0.2.7", features = ["unproven"] }
-esp32c6-lp       = { git = "https://github.com/esp-rs/esp-pacs", rev = "5706943", features = ["critical-section"] }
+esp32c6-lp       = { version = "0.1.0", features = ["critical-section"] }
 procmacros       = { package = "esp-hal-procmacros", path = "../esp-hal-procmacros", features = ["esp32c6-lp"] }
 riscv            = "0.10.1"
 paste            = "1.0.14"
